# trending-github

./: Dockerfile  Makefile  main.py  pyproject.toml
config/dag/: main.yaml
config/dag/hydra/job_logging/: custom.yaml
config/dag/tasks/: 1_download.yaml  2_top_repos.yaml  3_top_per_topic.yaml  4_write_results.yaml
config/top_repo/: main.yaml
config/top_repo/edges/: config.yaml
config/top_repo/tasks/: config.yaml
config/top_repo/tasks/task1/: 1_download.yaml
config/top_repo/tasks/task1/data_reader/: cli.yaml  python.yaml
config/top_repo/tasks/task2/: 2_top_repos.yaml
config/top_repo/tasks/task2/data_reader/: cli.yaml  python.yaml
config/top_repo/tasks/task3/: 3_top_per_topic.yaml
config/top_repo/tasks/task3/data_reader/: python.yaml
config/top_repo/tasks/task3bis/: 3_trending_repo.yaml
config/top_repo/tasks/task4/: 4_write_results.yaml
ext/: logging-config.ini
noteboks/: Untitled.ipynb
notebooks/: Untitled.ipynb
reports/: 2023-01-04_report.xlsx  2023-01-05_report.xlsx  2023-01-06_python_report.xlsx  2023-01-07_python_report.xlsx  repo.xlsx
src/core/: __init__.py
src/core/context/: cmanager.py
src/core/datamanager/: base.py  multiple.py  sharedmemory.py  sql.py
src/core/task/: __init__.py  base.py  dag.py
src/core/transformer/: base.py  basic.py
src/core/util/: __init__.py  behaviors.py  factory.py  loader.py  params_interpeter.py  singleton.py
src/filemanager/: __init__.py  fmanager.py
src/github/: __init__.py  gitapi.py
src/sql/: __init__.py  cmanager.py  datamanager.py
tests/: first_test.py
(+4 files in other folders)
